// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticator Button transformer tests should add translations for Custom Authenticator button 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "My custom authenticator app",
              "options": {
                "ctaLabel": "Verify",
                "key": "custom_app",
              },
              "translations": [
                {
                  "i18nKey": "oie.custom.app.authenticator.title",
                  "name": "description",
                  "noTranslate": undefined,
                  "value": "oie.custom.app.authenticator.title",
                },
              ],
              "type": "AuthenticatorButton",
            },
          ],
        },
        "type": "AuthenticatorButtonList",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Authenticator Button transformer tests should add translations for Email Authenticator button 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Okta Email",
              "options": {
                "ctaLabel": "Verify",
                "key": "okta_email",
              },
              "translations": [
                {
                  "i18nKey": "oie.email.label",
                  "name": "label",
                  "noTranslate": undefined,
                  "value": "oie.email.label",
                },
              ],
              "type": "AuthenticatorButton",
            },
          ],
        },
        "type": "AuthenticatorButtonList",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Authenticator Button transformer tests should add translations for OV button with Method type 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Okta Verify",
              "options": {
                "actionParams": {
                  "authenticator.methodType": "push",
                },
                "ctaLabel": "Verify",
                "key": "okta_verify",
              },
              "translations": [
                {
                  "i18nKey": "oie.okta_verify.push.title",
                  "name": "description",
                  "noTranslate": undefined,
                  "value": "oie.okta_verify.push.title",
                },
              ],
              "type": "AuthenticatorButton",
            },
          ],
        },
        "type": "AuthenticatorButtonList",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
